Fix line-wrap issue for the description text

--- a/refactor/components/NFTDetail.module.scss
+++ b/refactor/components/NFTDetail.module.scss
@@ -177,6 +177,7 @@
 
 	pre {
 		font-family: inherit;
+		white-space: pre-wrap;
 	}
 }
 
